@@ -1,5 +1,7 @@
 29 June 2007
 
+* New lexer makes ifdef/ifndef/endif possible, although not completely elegant.
+  Syntax is: ifdef $macro .... endif
 * Scrap use of lex in favour of custom C lexer. This allows (yet another)
   workaround for include files, to make stuff like this work:
 
@@ -391,4 +393,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.96 2007-06-29 15:18:24 nicm Exp $
+$Id: CHANGES,v 1.97 2007-06-29 17:32:40 nicm Exp $
